[project]
name = "fpbase.org"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    'algoliasearch_django==3.0.0',
    'argon2-cffi>=21.3.0',
    'biopython>=1.83',
    'celery[redis]==5.5.3',
    'django-allauth[socialaccount]>=0.70.0',
    'django-anymail==10.0',
    'django-autocomplete-light>=3.11.0',
    'django-avatar>=8.0.1',
    'django-cors-headers>=4.2.0',
    'django-crispy-forms==1.13.0', # NOTE: there's an issue with 1.14 and bootstrap4 forms not having form-control class
    'django-environ>=0.10.0',
    'django-filter>=23.3',
    'django-model-utils>=5.0.0',
    'django-mptt>=0.18.0',
    'django-recaptcha>=3.0.0',
    'django-redis>=6.0.0',
    'django-reversion-compare>=0.19.0',
    'django-reversion>=6.0.0',
    'django-webpack-loader>=2.0.1',
    'django>=5.2,<5.3',
    'djangorestframework-csv>=2.1.1',
    'djangorestframework>=3.14.0',
    'dnspython>=2.6.1',
    'drf-spectacular>=0.26.3',
    'google-analytics-data>=0.18.9',
    'google-auth>=2.29.0',
    'graphene-django-optimizer>=0.10.0',
    'graphene-django>=3.2.3',
    'graphene>=3.2.2',
    'habanero>=1.2.3',
    'matplotlib>=3.7.1',
    'maxminddb>=2.5.1',
    'numpy>=1.26.3',
    'Pillow>=10.0.0',
    'psycopg2>=2.9.11; platform_system == "Linux"',
    'python-json-logger>=2.0.7',
    'python-slugify>=8.0.1',
    'rcssmin>=1.1.1',
    'redis==5.0.4',
    'sentry-sdk>=2.8',
    'tablib>=3.4.0',
    "whitenoise[brotli]>=6.11.0",
    "django-storages[boto3]>=1.13.2",
    "gunicorn>=20.1.0",
    "scout-apm>=3.4.0",
]


[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11; platform_system == 'Darwin'",
    "django-coverage-plugin>=3.1.0",
    "django-debug-toolbar>=4.2",
    "django-extensions>=3.2.3",
    "django-stubs>=5.1.3",
    "django-test-plus>=2.2.4",
    "djangorestframework-stubs>=3.15.2",
    "factory-boy>=3.2.0",
    "mypy>=1.15.0",
    "pdbpp>=0.10.3",
    "pre-commit>=4.1.0",
    "pylint-django>=2.6.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.6",
    "selenium>=4.28.1",
    "watchfiles>=0.19.0",
    "werkzeug[watchdog]>=2.3.4",
    "ipython>=8.32.0",
    "playwright>=1.55.0",
    "pandas>=2.0.3",  # Only needed for local data import scripts (proteins/util/_local.py)
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "8.0"
DJANGO_SETTINGS_MODULE = "config.settings.test"
FAIL_INVALID_TEMPLATE_VARS = true
addopts = "--reuse-db --cov-config=pyproject.toml"
python_files = ["tests.py", "test_*.py"]
pythonpath = ["backend"]
norecursedirs = ["node_modules"]
filterwarnings = [
    "error",
    "ignore:SelectableGroups dict interface is deprecated::",
    "ignore:The DEFAULT_FILE_STORAGE setting is deprecated::",
    "ignore:django.core.files.storage.get_storage_class is deprecated::",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::ResourceWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources",
    "ignore:Normally Django will use a connection to the:RuntimeWarning",
    "ignore:.*_after_postgeneration will stop saving.*:DeprecationWarning:factory",
]


# ==== Coverage ====
[tool.coverage.run]
source = ["fpbase", "proteins", "references", "fpseq", "favit"]
omit = ["*/migrations/*", "*/tests/*", "proteins/management/**"]
# plugins = ["django_coverage_plugin"]


# ==== ruff ====
[tool.ruff]
src = ["backend/"]
line-length = 119
target-version = "py313"
exclude = ['*/migrations/*', '*/static/CACHE/*', '.venv']
[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "RUF", # Ruff-specific rules
]
ignore = [
    "B905",   # `zip()` without an explicit `strict=` parameter
    "S101",   # Use of assert detected.
    "RUF012", # Mutable class attributes should be annotated
]
[tool.ruff.lint.per-file-ignores]
"backend/config/settings/*" = ["F405"]


# ==== mypy ====
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.djlint]
